src/player.scss
/* Standardize padding in all browsers */
* {
	outline: 0;
	padding: 0px;
	margin: 0px;

	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-o-user-select: none;
	user-select: none !important;
}

html, body {
	cursor: default;
	background: #333;
	color: #fff;
	padding: 0;
	margin: 0;

	font-family: 'Lato', serif;

	overflow: hidden;

	// This is an IE thing, it prevents panning the page
	touch-action: none;
}

#board {
	position: fixed;
	display: block;
	left: 195px;
	top: 50px;
	right: 0px;
	bottom: 0px;
	#image {
		position: absolute;
		top: 0px;
		left: 0px;
	}
}

#header {
	position: absolute;
	top: 0px;
	left: 0px;
	right: 0px;
	height: 33px;
	background: #444;
	padding: 8px;
	z-index: 1000;

	.logo {
		display: block;
		background: url(assets/materialogo.png) no-repeat;
		width: 60px;
		height: 50px;
		float: left;
		margin-left: 17px;
		margin-top: 2px;
	}

	h1 {
		margin-left: 8px;
		font-family: 'Lato', serif;
		font-weight: 300;
		font-size: 22px !important;
		vertical-align: middle;
		margin-top: 3px;
	}
}

#unplaced-header, #placed-header {
	height: 0;
	width: 0;
	opacity: 0;
}

#placed-terms, #unplaced-terms {
	position: absolute;
	top: 50px;
	bottom: 0px;
	padding: 5px;
}

#unplaced-terms {
	h1 {
		text-align: center;
		font-size: 20px;
	}
	width: 190px;
	background: url(assets/checker.png);

	/* blocks for tween padding */
	div.block {
		background: url(assets/checker.png);
		position: fixed;
		width: 195px;
		left: 0px;
		&.top {
			height: 80px;
			top: 24px;
			&.hide {
				height: 40px;
			}
		}
		&.bottom {
			bottom: 0px;
			height: 57px;
			&.hide {
				height: 30px;
			}
		}
		z-index: 2;
	}
}

div.term {
	width: 150px;
	display: inline-block;
	position: fixed;
	z-index: 1;
	left: -28px;
	padding: 8px 5px;

	background: #fafafa;

	border-radius: 5px;
	border: solid 1px rgba(0,0,0,0.2);
	box-shadow: 0px 5px 2px rgba(0,0,0,0.2);

	transform: translate(50px,50px);

	font-size: 14px;
	font-family: 'Roboto Slab';
	color: #000;
	text-align: center;

	word-wrap: break-word;

	white-space: pre-wrap;

	max-height: 100px;

	overflow-x: hidden;
	overflow-y: auto;

	&.placed {
		background: #f7ecce;
		box-shadow: 0px 5px 3px rgba(0,0,0,0.2);
		border: none;
	}
	&.moving, &:hover, &:focus{
		background-color:#5fac4b;
		color:white;
	}
}

.ease {
	transition: all 0.4s ease;
}

#checkBtn, #instructionsBtn {
	position: fixed;
	right: 10px;
	top: 6px;
	border: solid 1px #353535;
	border-radius: 25px;
	background: #363636;
	color: #ccc;
	font-size: 13px;
	margin-top: 2px;
	padding: 8px 15px;
	z-index: 300;
	cursor: pointer;

	&.done {
		background: #5fac4b;
		color: #fff;
	}
	&:hover, &:focus {
		background: #5fbc4b;
		color: #fff;
	}
}

#instructionsBtn {
	right: 150px;
}

#keyboard_instructions {
	padding: 1em;
	color: #505050;
	max-width: 350px;

	#controls_header {
		font-weight: bold;
		padding-bottom: 5px;
	}

	table {
		border-collapse: collapse;
		width: 100%;
	}

	th, td {
		border: 1px solid gray;
		padding: 2px 8px;
		text-align: left;
	}

	tr {
		text-align: left;
	}
}

#backgroundcover {
	position: fixed;
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
	background: #000;
	z-index: -1;
	opacity: 0;
	-webkit-transition: all 0.5s ease;
	&.show {
		z-index: 18500;
		opacity: 0.5;
		-webkit-transition: opacity 0.5s ease;
	}
}

.box {
	width: 300px;
	left: 50%;
	top: 49%;
	margin-left: -150px;
	margin-top: -50px;
	padding: 15px;
	position: absolute;
	background: #fff;
	border: solid 1px #777;
	z-index: -1;
	opacity: 0;
	-webkit-transition: all 0.5s ease;

	&.show {
		z-index: 19000;
		opacity: 1;
	}

	box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
	text-align: center;

	color: #333;

	input {
		margin: 10px;
		border: solid 1px #333;
		font-family: 'Lato';
		font-size: 16px;
		color: #333;
		background: #fff;
		margin: 16px 6px 4px 6px;
		transition: all 0.1s ease;
		position: relative;
		padding: 7px;
		width: 130px;
	}
}

.fade {
	transition: opacity 0.2s ease;
}

input {
	-webkit-appearance: none;
	cursor: pointer;

	&.green:hover, &.green:focus{
		background: #78DD5E;
		color: #fff;
		border: 1px solid #78DD5E;
	}
}

#prevbtn {
	top: 58px;
}

#nextbtn {
	bottom: 12px;
}

#cancelbtn {
	&:focus, &:hover {

		background: #78DD5E;
		color: #000;
		border: 1px solid #78DD5E;
	}
}

@font-face {
	font-family: 'icomoon';
	src:url('assets/font/icomoon.eot?e9x1lc');
	src:url('assets/font/icomoon.eot?#iefixe9x1lc') format('embedded-opentype'),
		url('assets/font/icomoon.woff?e9x1lc') format('woff'),
		url('assets/font/icomoon.ttf?e9x1lc') format('truetype'),
		url('assets/font/icomoon.svg?e9x1lc#icomoon') format('svg');
	font-weight: normal;
	font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
	font-family: 'icomoon';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;

	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.icon-arrow-down:before {
	content: "\e601";
}
.icon-arrow-up:before {
	content: "\e602";
}
.icon-arrow-up2:before {
	content: "\e603";
}
.icon-arrow-down2:before {
	content: "\e604";
}

div.arrow {
	left: 78px;
	position: fixed;
	z-index: 10000;
	font-size: 16px;
	background: #5fac4b;
	width: 36px;
	height: 26px;
	border-radius: 50px;
	text-align: center;
	padding-top: 10px;
	opacity: 0;
}

#ghost {
	box-shadow: 0px 0px 5px #000;
	border: none;
	z-index: 0;
	&.hide {
		opacity: 0 !important;
		-webkit-transition: opacity 0.5s ease;
		-webkit-transition-delay: 0.5s;
	}
}

@-webkit-keyframes fadeout {
	0% { opacity: 0.5; }
	100% { opacity: 0; }
}

#donearrow {
	position: absolute;
	background: #ffff82;
	display: block;
	z-index: 9999;
	display: none;

	width: 100px;
	right: 175px;
	top: 12px;
	height: 14px;

	text-align: center;
	font-size: 12px;
	padding: 5px;

	color: #333;

	-webkit-animation: bobber 1s infinite;
	-webkit-transition: opacity 0.2s ease;
	animation: bobber 1s infinite;
	transition: opacity 0.2s ease;

	h1 {
		font-size: 14px;
	}

	&:after, &:before {
		bottom: 0px;
		left: 100%;
		border: solid transparent;
		content: " ";
		height: 0;
		width: 0;
		position: absolute;
		pointer-events: none;
	}

	&:after {
		border-color: rgba(136, 183, 213, 0);
		border-left-color: #ffff82;
		border-width: 12px;
		margin-left: 0px;
	}

	b {
		text-transform: uppercase;
		font-weight: bold;
	}
}

//iPad likes transform better
@-webkit-keyframes bobber {
	0% {
		-webkit-transform: translate(10px,0px);
	}
	50% {
		-webkit-transform: translate(0px,0px);
	}
	100% {
		-webkit-transform: translate(10px,0px);
	}
}
@keyframes bobber {
	0% {
		margin-right: 0px;
	}
	50% {
		margin-right: 10px;
	}
	100% {
		margin-right: 0px;
	}
}

.preview {
	display: block;
	position: absolute;
	opacity: 0;
	z-index: -1;
	width: 650px;
	margin: auto;
	left: 0;
	right: 0;
	height: fit-content;
	top: 0;
	bottom: 0;

	&.show {
		opacity: 1;
		z-index: 19000;
	}

	.instructions-content {
		display: flex;
		flex-direction: row;
		align-items: center;
	}

	.board {
		margin: 10px auto;
		position: relative;
		background: #dfdfdf;
		display: block;
		width: 250px;
		height: 200px;

		.terms {
			background: #ccc;
			width: 80px;
			top: 0px;
			height: 100%;
			display: block;
		}

		.term {
			display: block;
			margin-top: 5px;
			position: relative;
			width: 60px;
			padding-top: 15px;
			left: 50px;
			top: 50px;
			box-shadow: 0px 0px 3px rgba(0,0,0,0.2);
			transform: translate(-40px,-40px);
			z-index: 5;

			&.first {
				animation: firstterm 8s infinite;
			}
			&.second {
				animation: secondterm 8s infinite;
			}
			&.third {
				animation: thirdterm 8s infinite;
			}
		}
		.cursor {
			position: absolute;
			top: 0px;
			left: 0px;
			animation: cursor 8s infinite;
			z-index: 10;
		}
		.img {
			position: absolute;
			left: 100px;
			top: 60px;
			background: url(assets/preview.png) no-repeat;
			background-color: #fff;
			width: 130px;
			height: 85px;
			display: block;
			padding: 0px;
			border: solid 1px #ccc;
			box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
		}
		.previewimg {
			position: absolute;
			top: 0px;
			left: 0px;
			z-index: 4;
		}
		#previewimg1 {
			animation: firstimg 8s infinite;
			opacity: 0;
		}
		#previewimg2 {
			animation: secondimg 8s infinite;
			opacity: 0;
		}
		#previewimg3 {
			animation: thirdimg 8s infinite;
			opacity: 0;
		}
	}
	span {
		font-size: 13px;
	}
}

@keyframes cursor {
	0% {
		transform: translate(120px,125px);
	}
	10% {
		transform: translate(38px,80px);
	}
	20% {
		transform: translate(160px,45px);
	}
	35% {
		transform: translate(38px,50px);
	}
	45% {
		transform: translate(205px,80px);
	}
	60% {
		transform: translate(30px,20px);
	}
	72% {
		transform: translate(135px,150px);
	}
	100% {
		transform: translate(135px,150px);
	}
}

@keyframes firstterm {
	60% {
		transform: translate(-40px,-40px);
	}
	72% {
		transform: translate(60px,90px);
	}
	100% {
		transform: translate(60px,90px);
	}
}


@keyframes secondterm {
	35% {
		transform: translate(-40px,-40px);
	}
	45% {
		transform: translate(130px,-10px);
	}
	100% {
		transform: translate(130px,-10px);
	}
}

@keyframes thirdterm {
	10% {
		transform: translate(-40px,-40px);
	}
	20% {
		transform: translate(80px,-80px);
	}
	100% {
		transform: translate(80px,-80px);
	}
}
@keyframes firstimg {
	15% {
		opacity: 0;
	}
	20% {
		opacity: 1;
	}
	100% {
		opacity: 1;
	}
}
@keyframes secondimg {
	40% {
		opacity: 0;
	}
	45% {
		opacity: 1;
	}
	100% {
		opacity: 1;
	}
}
@keyframes thirdimg {
	67% {
		opacity: 0;
	}
	72% {
		opacity: 1;
	}
	100% {
		opacity: 1;
	}
}

#ripple {
	display:block;
	width: 25px;
	height: 25px;
	opacity: 0;
	z-index: 9999;
	position:absolute;
	left: -13px;
	top: -12px;
	border-radius: 60px;

	&.play {
		animation: ripple 0.25s;
	}
}

@keyframes ripple {
	0% {
		opacity: 1;
		box-shadow: 0px 0px 20px #fff;
	}
	50% {
		box-shadow: 0px 0px 100px #fff, inset 0px 0px 50px #fff;
		opacity: 1;
	}
	75% {
		opacity: 1;
		width: 50px;
		height: 50px;
		left: -25px;
		top: -25px;
	}
	100% {
		box-shadow: 0px 0px 250px #fff;
		opacity: 0;
		width: 50px;
		height: 50px;
		left: -25px;
		top: -25px;
	}
}

@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)  {
	#header {
		h1 {
			font-weight: 400 !important;
		}
	}
	.cursor {
		background: #000 !important;
		opacity: 0.5;
		width: 18px !important;
		height: 18px !important;
		border-radius: 50px;
		svg {
			display: none;
		}
	}
}

